# SkyLight

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_and_install.sh  install_dependencies.sh
.github/workflows/: simple_build.yml  skylight_cicd.yaml
config/: lcm_config.toml
docs/: README.md  example_node_communication.txt
firmware/teensy/spi_test/: spi_test.ino
hardware/BAPPR/: BAPPR.circuitjs.txt
hardware/models/head/: SkyLight.blend  SkyLight.blend1
nodes/: CMakeLists.txt  nodes.sln
nodes/common/: messaging.h
nodes/test/: main.cpp  test.vcxproj
nodes/test2/: main.cpp  test2.vcxproj
nodes/test_node_1/: CMakeLists.txt  main.cpp
nodes/test_node_2/: CMakeLists.txt  main.cpp
nodes/types/exlcm/: example_t.hpp
scripts/: install_dependencies.sh
src/common/: messaging.h  skylight_config.h  skylight_messaging.h  skylight_time.h
src/config/: lcm_config.toml  service_template.service  skylight_topic_config.toml  topic_config.toml
src/message_types/: pixel_buffer.lcm  simple_float.lcm  simple_string.lcm  simple_void.lcm  trigger.lcm  user_command.lcm
src/message_types/test/: user_command.lcm
src/nodes/button/: CMakeLists.txt  main.cpp  skylight_button.toml
src/nodes/cli/: CMakeLists.txt  main.cpp
src/nodes/command_to_topic/: CMakeLists.txt  command_storage.cpp  command_storage.h  command_to_topic_node.cpp  command_to_topic_node.h  main.cpp
src/nodes/effect_driver/: CMakeLists.txt  effect_driver.cpp  effect_driver.h  effect_driver_node.cpp  effect_driver_node.h  hsv_to_rgb.h  main.cpp  skylight_effect_driver.toml
src/nodes/effect_driver/effects/: compositor.cpp  compositor.h  effect.cpp  effect.h  harness.cpp  harness.h
src/nodes/effect_driver/effects/effects/: basic_effect.h
src/nodes/effect_driver_and_gpio/: CMakeLists.txt  main.cpp
src/nodes/gpio/: CMakeLists.txt  gpio.cpp  gpio.h  gpio_node.cpp  gpio_node.h  main.cpp  skylight_gpio.toml  spi.cpp  spi.h
src/nodes/led_driver/: CMakeLists.txt  main.cpp  skylight_led_driver.toml
src/nodes/sound/: CMakeLists.txt  main.cpp  skylight_sound.toml  sound.cpp  sound.h  soundNode.cpp  sound_node.cpp  sound_node.h
src/nodes/speech/: CMakeLists.txt  main.cpp  skylight_speech.toml  speech.cpp  speech.h  speechNode.cpp  speechNode.h  speech_node.cpp  speech_node.h
src/nodes/test/button/: CMakeLists.txt  button.cpp  main.cpp
src/nodes/test/effect_driver/: CMakeLists.txt  effect_driver.cpp  main.cpp
src/nodes/test/speed_test/receive/: CMakeLists.txt  main.cpp
src/nodes/test/speed_test/send/: CMakeLists.txt  main.cpp
src/nodes/test/spi_test/: CMakeLists.txt  main.cpp
